--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "server": "nodemon server"
   },
-  "devDependencies": {
-    "vite": "^5.1.0"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "openai": "^4.33.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "nodemon": "^3.1.0",
+    "openai": "^4.33.0"
   }
 }
